--- a/November_2022/30_11_2022/index.html
+++ b/November_2022/30_11_2022/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>30.11.2022</title>
 </head>
 <body>
-    <div class="root">
-        
+    <div class="main">
+        <form class="form-1">
+            <textarea name="text" id="textarea" cols="30" rows="10"></textarea>
+        </form>
     </div>
     <script src="./script.js"></script>
 </body>
