--- a/January_2023/11_01_2023/index.html
+++ b/January_2023/11_01_2023/index.html
@@ -11,10 +11,11 @@
     <div class="root">
         <p class="form_txt"></p>
         <form class="form">
-            <input type="number" name="id" class="input_id" placeholder="Enter ID from 1 to 20">
+            <input type="number" name="id" class="input_id" placeholder=" Enter ID from 1 to 20">
             <button class="btn"></button>
         </form>
     </div>
+    <div class="box"></div> 
     <script src="./script.js"></script>
 </body>
 </html>
