--- a/November_2022/30_11_2022/index.html
+++ b/November_2022/30_11_2022/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>30.11.2022</title>
+    <title>30 Nov 2022</title>
 </head>
 <body>
     <div class="main">
